--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,9 @@
 .box:hover{
     box-shadow: 5px 5px 10px black;
 }
+.instaicon{
+    background: #4649FF;
+}
+.instaicon:hover{
+    background-color:#7978FF ;
+}
