--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,16 @@
 .instaicon:hover{
     background-color:#7978FF ;
 }
+.icons{
+    background: #4649FF;
+    border-radius: 50px;
+    margin-left: 50px;
+    margin-bottom: 12px;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    bottom: 166px;
+    padding-top:11px;
+    padding-left: 11px;
+    box-shadow: 2px 2px 5px black;
+}
