--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,13 @@
     padding: 100px;
     padding-left: 150px;
 }
+.skillsandtools{
+    width: 230px;
+    height:230px;
+    background: #B7C4CF;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+    box-shadow: 20px 20px black;
+    margin: 50px;
+    padding: 30px;
+}
